Fixed archive row filtering.  Key was to use display:none instead of visibility style.

--- a/GUI/css/GUI.css
+++ b/GUI/css/GUI.css
@@ -139,10 +139,10 @@
 	padding-left: 10px;
     }
 .namecell {
-	width: 175px;
+	width: 265px;
 	}
 .statuscell {
-	width:70px;
+	width:90px;
 	}
 	
 .socket1 { top: 0px; 	left:  0px; position: absolute; }
